<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E6193"
    app:layout_constraintTop_toTopOf="@id/toolbar"
    app:layout_constraintVertical_weight="1">

    <Toolbar
        android:id="@+id/toolbar"
        style="@style/CustomBar"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inside_view"
        style="@style/main_view"
        android:background="#2898f0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <fr.mother3vf.mother3vf.PixelatedImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cropToPadding="false"
            android:src="@drawable/image" />

        <ImageView
            android:id="@+id/title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_description"
            android:src="@drawable/titre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/romButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/applyPatch"
            android:focusable="true"
            android:text="@string/browse"
            android:textColor="@drawable/focusable"
            android:layout_marginHorizontal="8dp" />

        <TextView
            android:id="@+id/romText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/romButton"
            app:layout_constraintTop_toTopOf="@id/romButton"
            app:layout_constraintBottom_toBottomOf="@id/romButton"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="2" />

        <CheckBox
            android:id="@+id/backupCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/romButton"
            app:layout_constraintBottom_toTopOf="@id/applyPatch"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/checkbox_bg"
            android:checked="true"
            android:focusable="true"
            android:paddingEnd="5dp"
            android:text="@string/backup_rom"
            android:textColor="@drawable/focusable"
            tools:ignore="RtlSymmetry"
            android:layout_marginHorizontal="8dp"/>

        <Button
            android:id="@+id/applyPatch"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/romButton"
            app:layout_constraintBottom_toTopOf="@id/backupCheckbox"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/buttons_block_apply"
            android:enabled="false"
            android:focusable="false"
            android:text="@string/patch"
            android:textColor="@drawable/focusable"
            android:layout_marginHorizontal="8dp" />

        <TextView
            android:id="@+id/website"
            style="@style/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/applyPatch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="2dp"
            android:paddingVertical="1dp"
            android:text="@string/site_btn"
            android:textColor="#1E6193"
            android:visibility="visible" />

        <TextView
            android:id="@+id/open_doc"
            style="@style/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/applyPatch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="2dp"
            android:paddingVertical="1dp"
            android:text="@string/doc_btn"
            android:textColor="#1E6193"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/about"
            style="@style/link"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/info_description"
            android:focusable="true"
            android:padding="1dp"
            android:src="@drawable/about"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
