<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E6193">

    <RelativeLayout style="@style/main_view"
        android:background="#2898f0">

        <fr.mother3vf.mother3vf.PixelatedImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:src="@drawable/image" />

        <ImageView
            android:id="@+id/title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/titre" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                style="@style/buttons_block"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <Button
                    android:id="@+id/romButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@drawable/focusable"
                    android:text="@string/browse"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/romText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/romButton"
                    android:layout_alignTop="@+id/romButton"
                    android:layout_toRightOf="@id/romButton"
                    android:layout_marginLeft="4dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2" />

                <CheckBox
                    android:id="@+id/backupCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/romButton"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="0dp"
                    android:paddingRight="5dp"
                    android:textColor="@drawable/focusable"
                    android:background="@drawable/checkbox_bg"
                    android:focusable="true"
                    android:checked="true"
                    android:text="@string/bkup_rom"/>

                <Button
                    android:id="@+id/applyPatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/backupCheckbox"
                    android:textColor="@drawable/focusable"
                    android:focusable="false"
                    android:enabled="false"
                    android:text="@string/patch"/>

                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/applyPatch"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="2dp"
                    android:background="@drawable/link_bg"
                    android:paddingTop="1dp"
                    android:paddingBottom="1dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:focusable="true"
                    android:textColor="#1E6193"
                    android:fontFamily="sans-serif-medium"
                    android:visibility="visible"
                    android:text="@string/site_btn"/>

                <TextView
                    android:id="@+id/opendoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/applyPatch"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="2dp"
                    android:background="@drawable/link_bg"
                    android:paddingTop="1dp"
                    android:paddingBottom="1dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:focusable="true"
                    android:textColor="#1E6193"
                    android:fontFamily="sans-serif-medium"
                    android:visibility="invisible"
                    android:text="@string/doc_btn"/>

            </RelativeLayout>

            <RelativeLayout
                style="@style/buttons_block_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/about"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/background"
            android:layout_alignRight="@+id/background"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:focusable="true"
            android:background="@drawable/link_bg"
            android:padding="1dp"
            android:src="@drawable/about" />
    </RelativeLayout>

</RelativeLayout>
